<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.example.komalagarwal.myapplication.ItemFragment">




    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/viewaccount"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/view"
        android:textSize="30dp"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/editaccount"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/deleteaccount"
        android:textColor="@color/white"
        android:layout_marginTop="120dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/addinformation"
        android:textColor="@color/white"
        android:layout_marginTop="180dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/viewinfo"
        android:textColor="@color/white"
        android:layout_marginTop="240dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/editinfo"
        android:textColor="@color/white"
        android:layout_marginTop="300dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/deleteinfo"
        android:textColor="@color/white"
        android:layout_marginTop="360dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/changepass"
        android:textColor="@color/white"
        android:layout_marginTop="420dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/changempass"
        android:textColor="@color/white"
        android:layout_marginTop="480dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="28dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:layout_marginTop="540dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:textSize="30dp"/>
</FrameLayout>
