<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.komalagarwal.myapplication.Fragment">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/viewaccount"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/view"
        android:textSize="20dp"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/editaccount"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/edit"
        android:textSize="20dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/addinformation"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/add"
        android:textSize="20dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/viewinfo"
        android:textColor="@color/white"
        android:layout_marginTop="120dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/view1"
        android:textSize="20dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/editinfo"
        android:textColor="@color/white"
        android:layout_marginTop="160dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/edit1"
        android:textSize="20dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/deleteinfo"
        android:textColor="@color/white"
        android:layout_marginTop="200dp"
        android:background="@color/blue"
        android:id="@+id/del"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/changepass"
        android:textColor="@color/white"
        android:layout_marginTop="240dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/cp"
        android:textSize="20dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/changempass"
        android:textColor="@color/white"
        android:layout_marginTop="280dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/mp"
        android:textSize="20dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:layout_marginTop="320dp"
        android:background="@color/blue"
        android:textStyle="bold"
        android:id="@+id/lo"
        android:textSize="20dp"/>
</RelativeLayout>
