<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bk26"
    tools:context="com.example.komalagarwal.myapplication.Edit_acc">


<TextView
    android:layout_width="400dp"
    android:layout_height="60dp"
    android:text="@string/editacc"
    android:textSize="25dp"
    android:textStyle="bold"
    android:gravity="center"
    android:textColor="@color/black"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:text="@string/username"
        android:layout_marginTop="70dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:id="@+id/name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="70dp"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/phoneno"
        android:textColor="@color/black"
        android:layout_marginTop="145dp"
        android:textSize="25dp"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:id="@+id/phone"
        android:layout_marginTop="200dp"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:layout_marginTop="270dp"
        android:textSize="25dp"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:id="@+id/email"
        android:layout_marginTop="325dp"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/savechangs"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/sc"
        android:background="@color/highlighted_text_material_dark"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="70dp"/>
</RelativeLayout>
