<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bk29"
    tools:context="com.example.komalagarwal.myapplication.Change_mpass">


    <TextView
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:text="@string/chngmpass"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center"
        />
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:text="@string/entercurrentpass"
        android:textSize="20dp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:inputType="number"
        android:id="@+id/cpass"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="190dp"
        android:text="@string/enternewpass"
        android:textSize="20dp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:id="@+id/npass"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
        android:text="@string/reenter"
        android:inputType="number"
        android:textSize="20dp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:layout_marginTop="360dp"
        android:id="@+id/cnpass"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="70dp"
        android:id="@+id/sc"
        android:layout_centerHorizontal="true"
        android:text="@string/savechangs"
        android:textSize="25dp"
        android:background="@color/highlighted_text_material_dark"/>
</RelativeLayout>
