<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bk25"
    tools:context="com.example.komalagarwal.myapplication.Register">

    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:textSize="30dp"
        android:text="@string/addacc"
        android:textColor="@color/white"
        android:textStyle="bold"
       android:gravity="center"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/username"

        android:id="@+id/textView3" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:id="@+id/uname"
       android:layout_marginTop="60dp"
        android:layout_marginLeft="100dp"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/password"
        android:id="@+id/textView" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="120dp"

        android:id="@+id/pass"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/reenter"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="100dp"

        android:id="@+id/cnfrmpass"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/mpass"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="240dp"
        android:inputType="numberPassword"
        android:id="@+id/mpass"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/phoneno"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:inputType="phone"
        android:id="@+id/phone"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="360dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/email"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="360dp"
        android:id="@+id/email"
        />
    <ImageButton
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register"
        android:id="@+id/reg"/>
</RelativeLayout>
