<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bk25"
    tools:context="com.example.komalagarwal.myapplication.Add_username">


    <TextView
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:text="@string/enterusername"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30dp"
       />
    <EditText
         android:layout_width="500dp"
         android:layout_height="60dp"
         android:textColor="@color/black"
         android:layout_marginTop="60dp"
          android:id="@+id/uname"/>
    <TextView
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:layout_marginTop="140dp"
        android:textStyle="bold"
        android:text="@string/enterpass"
        android:textSize="30dp"
        />
    <EditText
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:layout_marginTop="200dp"
        android:id="@+id/pass"/>
    <TextView
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        android:textColor="@color/white"
        android:text="@string/servicename"
        android:textStyle="bold"
        android:textSize="30dp"
        />
    <EditText
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:layout_marginTop="340dp"
        android:id="@+id/service"/>
    <TextView
        android:layout_width="500dp"
        android:layout_height="20dp"
        android:layout_marginTop="400dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:text="@string/servicedesc"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:layout_marginLeft="90dp"
        android:background="@color/highlighted_text_material_dark"
        android:text="@string/add"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:id="@+id/add"/>
</RelativeLayout>
