

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bk25"
    tools:context="com.example.komalagarwal.myapplication.View_details">

   <TextView
       android:layout_width="400dp"
       android:layout_height="60dp"
       android:text="@string/selectusername"
       android:textSize="25dp"
       android:textStyle="bold"
       android:layout_centerHorizontal="true"
       android:gravity="center"
       android:textColor="@color/white"/>
    <Spinner
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@color/black"
        android:layout_marginTop="70dp"
        android:id="@+id/sp"></Spinner>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="145dp"
        android:text="@string/viewdetail"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/view"
        android:background="@color/highlighted_text_material_dark"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/username"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:layout_marginTop="210dp"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/password"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:layout_marginTop="320dp"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:id="@+id/un"
        android:textColor="@color/black"
        android:background="@color/white"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="360dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:id="@+id/pass"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="425dp"
        android:text="@string/savechangs"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:background="@color/highlighted_text_material_dark"
        android:id="@+id/save"/>

</RelativeLayout>
